SIC_XE_ASSEMBLER/calc/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    UMINUS

Grammar

Rule 0     S' -> calc
Rule 1     calc -> OCTO expression
Rule 2     calc -> AT expression
Rule 3     expression -> MINUS expression
Rule 4     expression -> FACTORIAL expression
Rule 5     expression -> expression PLUS expression
Rule 6     expression -> expression MINUS expression
Rule 7     expression -> expression MULTIPLY expression
Rule 8     expression -> expression DIVIDE expression
Rule 9     expression -> expression MOD expression
Rule 10    expression -> expression LESST expression
Rule 11    expression -> expression MORET expression
Rule 12    expression -> expression LESSEQ expression
Rule 13    expression -> expression MOREEQ expression
Rule 14    expression -> expression OR expression
Rule 15    expression -> expression AND expression
Rule 16    expression -> INTH
Rule 17    expression -> INT
Rule 18    expression -> FLOAT
Rule 19    expression -> var
Rule 20    expression -> NAME EQUALS expression
Rule 21    var -> NAME
Rule 22    expression -> LPARENT expression RPARENT
Rule 23    empty -> <empty>

Terminals, with rules where they appear

AND                  : 15
AT                   : 2
DIVIDE               : 8
EQUALS               : 20
FACTORIAL            : 4
FLOAT                : 18
INT                  : 17
INTH                 : 16
LESSEQ               : 12
LESST                : 10
LPARENT              : 22
MINUS                : 3 6
MOD                  : 9
MOREEQ               : 13
MORET                : 11
MULTIPLY             : 7
NAME                 : 20 21
OCTO                 : 1
OR                   : 14
PLUS                 : 5
RPARENT              : 22
UMINUS               : 
error                : 

Nonterminals, with rules where they appear

calc                 : 0
empty                : 
expression           : 1 2 3 4 5 5 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 20 22
var                  : 19

Parsing method: LALR

state 0

    (0) S' -> . calc
    (1) calc -> . OCTO expression
    (2) calc -> . AT expression

    OCTO            shift and go to state 2
    AT              shift and go to state 3

    calc                           shift and go to state 1

state 1

    (0) S' -> calc .



state 2

    (1) calc -> OCTO . expression
    (3) expression -> . MINUS expression
    (4) expression -> . FACTORIAL expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression LESST expression
    (11) expression -> . expression MORET expression
    (12) expression -> . expression LESSEQ expression
    (13) expression -> . expression MOREEQ expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . INTH
    (17) expression -> . INT
    (18) expression -> . FLOAT
    (19) expression -> . var
    (20) expression -> . NAME EQUALS expression
    (22) expression -> . LPARENT expression RPARENT
    (21) var -> . NAME

    MINUS           shift and go to state 5
    FACTORIAL       shift and go to state 6
    INTH            shift and go to state 7
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    NAME            shift and go to state 11
    LPARENT         shift and go to state 12

    expression                     shift and go to state 4
    var                            shift and go to state 10

state 3

    (2) calc -> AT . expression
    (3) expression -> . MINUS expression
    (4) expression -> . FACTORIAL expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression LESST expression
    (11) expression -> . expression MORET expression
    (12) expression -> . expression LESSEQ expression
    (13) expression -> . expression MOREEQ expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . INTH
    (17) expression -> . INT
    (18) expression -> . FLOAT
    (19) expression -> . var
    (20) expression -> . NAME EQUALS expression
    (22) expression -> . LPARENT expression RPARENT
    (21) var -> . NAME

    MINUS           shift and go to state 5
    FACTORIAL       shift and go to state 6
    INTH            shift and go to state 7
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    NAME            shift and go to state 11
    LPARENT         shift and go to state 12

    expression                     shift and go to state 13
    var                            shift and go to state 10

state 4

    (1) calc -> OCTO expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . MULTIPLY expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . MOD expression
    (10) expression -> expression . LESST expression
    (11) expression -> expression . MORET expression
    (12) expression -> expression . LESSEQ expression
    (13) expression -> expression . MOREEQ expression
    (14) expression -> expression . OR expression
    (15) expression -> expression . AND expression

    $end            reduce using rule 1 (calc -> OCTO expression .)
    PLUS            shift and go to state 14
    MINUS           shift and go to state 15
    MULTIPLY        shift and go to state 16
    DIVIDE          shift and go to state 17
    MOD             shift and go to state 18
    LESST           shift and go to state 19
    MORET           shift and go to state 20
    LESSEQ          shift and go to state 21
    MOREEQ          shift and go to state 22
    OR              shift and go to state 23
    AND             shift and go to state 24


state 5

    (3) expression -> MINUS . expression
    (3) expression -> . MINUS expression
    (4) expression -> . FACTORIAL expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression LESST expression
    (11) expression -> . expression MORET expression
    (12) expression -> . expression LESSEQ expression
    (13) expression -> . expression MOREEQ expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . INTH
    (17) expression -> . INT
    (18) expression -> . FLOAT
    (19) expression -> . var
    (20) expression -> . NAME EQUALS expression
    (22) expression -> . LPARENT expression RPARENT
    (21) var -> . NAME

    MINUS           shift and go to state 5
    FACTORIAL       shift and go to state 6
    INTH            shift and go to state 7
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    NAME            shift and go to state 11
    LPARENT         shift and go to state 12

    expression                     shift and go to state 25
    var                            shift and go to state 10

state 6

    (4) expression -> FACTORIAL . expression
    (3) expression -> . MINUS expression
    (4) expression -> . FACTORIAL expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression LESST expression
    (11) expression -> . expression MORET expression
    (12) expression -> . expression LESSEQ expression
    (13) expression -> . expression MOREEQ expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . INTH
    (17) expression -> . INT
    (18) expression -> . FLOAT
    (19) expression -> . var
    (20) expression -> . NAME EQUALS expression
    (22) expression -> . LPARENT expression RPARENT
    (21) var -> . NAME

    MINUS           shift and go to state 5
    FACTORIAL       shift and go to state 6
    INTH            shift and go to state 7
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    NAME            shift and go to state 11
    LPARENT         shift and go to state 12

    expression                     shift and go to state 26
    var                            shift and go to state 10

state 7

    (16) expression -> INTH .

    PLUS            reduce using rule 16 (expression -> INTH .)
    MINUS           reduce using rule 16 (expression -> INTH .)
    MULTIPLY        reduce using rule 16 (expression -> INTH .)
    DIVIDE          reduce using rule 16 (expression -> INTH .)
    MOD             reduce using rule 16 (expression -> INTH .)
    LESST           reduce using rule 16 (expression -> INTH .)
    MORET           reduce using rule 16 (expression -> INTH .)
    LESSEQ          reduce using rule 16 (expression -> INTH .)
    MOREEQ          reduce using rule 16 (expression -> INTH .)
    OR              reduce using rule 16 (expression -> INTH .)
    AND             reduce using rule 16 (expression -> INTH .)
    $end            reduce using rule 16 (expression -> INTH .)
    RPARENT         reduce using rule 16 (expression -> INTH .)


state 8

    (17) expression -> INT .

    PLUS            reduce using rule 17 (expression -> INT .)
    MINUS           reduce using rule 17 (expression -> INT .)
    MULTIPLY        reduce using rule 17 (expression -> INT .)
    DIVIDE          reduce using rule 17 (expression -> INT .)
    MOD             reduce using rule 17 (expression -> INT .)
    LESST           reduce using rule 17 (expression -> INT .)
    MORET           reduce using rule 17 (expression -> INT .)
    LESSEQ          reduce using rule 17 (expression -> INT .)
    MOREEQ          reduce using rule 17 (expression -> INT .)
    OR              reduce using rule 17 (expression -> INT .)
    AND             reduce using rule 17 (expression -> INT .)
    $end            reduce using rule 17 (expression -> INT .)
    RPARENT         reduce using rule 17 (expression -> INT .)


state 9

    (18) expression -> FLOAT .

    PLUS            reduce using rule 18 (expression -> FLOAT .)
    MINUS           reduce using rule 18 (expression -> FLOAT .)
    MULTIPLY        reduce using rule 18 (expression -> FLOAT .)
    DIVIDE          reduce using rule 18 (expression -> FLOAT .)
    MOD             reduce using rule 18 (expression -> FLOAT .)
    LESST           reduce using rule 18 (expression -> FLOAT .)
    MORET           reduce using rule 18 (expression -> FLOAT .)
    LESSEQ          reduce using rule 18 (expression -> FLOAT .)
    MOREEQ          reduce using rule 18 (expression -> FLOAT .)
    OR              reduce using rule 18 (expression -> FLOAT .)
    AND             reduce using rule 18 (expression -> FLOAT .)
    $end            reduce using rule 18 (expression -> FLOAT .)
    RPARENT         reduce using rule 18 (expression -> FLOAT .)


state 10

    (19) expression -> var .

    PLUS            reduce using rule 19 (expression -> var .)
    MINUS           reduce using rule 19 (expression -> var .)
    MULTIPLY        reduce using rule 19 (expression -> var .)
    DIVIDE          reduce using rule 19 (expression -> var .)
    MOD             reduce using rule 19 (expression -> var .)
    LESST           reduce using rule 19 (expression -> var .)
    MORET           reduce using rule 19 (expression -> var .)
    LESSEQ          reduce using rule 19 (expression -> var .)
    MOREEQ          reduce using rule 19 (expression -> var .)
    OR              reduce using rule 19 (expression -> var .)
    AND             reduce using rule 19 (expression -> var .)
    $end            reduce using rule 19 (expression -> var .)
    RPARENT         reduce using rule 19 (expression -> var .)


state 11

    (20) expression -> NAME . EQUALS expression
    (21) var -> NAME .

    EQUALS          shift and go to state 27
    PLUS            reduce using rule 21 (var -> NAME .)
    MINUS           reduce using rule 21 (var -> NAME .)
    MULTIPLY        reduce using rule 21 (var -> NAME .)
    DIVIDE          reduce using rule 21 (var -> NAME .)
    MOD             reduce using rule 21 (var -> NAME .)
    LESST           reduce using rule 21 (var -> NAME .)
    MORET           reduce using rule 21 (var -> NAME .)
    LESSEQ          reduce using rule 21 (var -> NAME .)
    MOREEQ          reduce using rule 21 (var -> NAME .)
    OR              reduce using rule 21 (var -> NAME .)
    AND             reduce using rule 21 (var -> NAME .)
    $end            reduce using rule 21 (var -> NAME .)
    RPARENT         reduce using rule 21 (var -> NAME .)


state 12

    (22) expression -> LPARENT . expression RPARENT
    (3) expression -> . MINUS expression
    (4) expression -> . FACTORIAL expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression LESST expression
    (11) expression -> . expression MORET expression
    (12) expression -> . expression LESSEQ expression
    (13) expression -> . expression MOREEQ expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . INTH
    (17) expression -> . INT
    (18) expression -> . FLOAT
    (19) expression -> . var
    (20) expression -> . NAME EQUALS expression
    (22) expression -> . LPARENT expression RPARENT
    (21) var -> . NAME

    MINUS           shift and go to state 5
    FACTORIAL       shift and go to state 6
    INTH            shift and go to state 7
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    NAME            shift and go to state 11
    LPARENT         shift and go to state 12

    expression                     shift and go to state 28
    var                            shift and go to state 10

state 13

    (2) calc -> AT expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . MULTIPLY expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . MOD expression
    (10) expression -> expression . LESST expression
    (11) expression -> expression . MORET expression
    (12) expression -> expression . LESSEQ expression
    (13) expression -> expression . MOREEQ expression
    (14) expression -> expression . OR expression
    (15) expression -> expression . AND expression

    $end            reduce using rule 2 (calc -> AT expression .)
    PLUS            shift and go to state 14
    MINUS           shift and go to state 15
    MULTIPLY        shift and go to state 16
    DIVIDE          shift and go to state 17
    MOD             shift and go to state 18
    LESST           shift and go to state 19
    MORET           shift and go to state 20
    LESSEQ          shift and go to state 21
    MOREEQ          shift and go to state 22
    OR              shift and go to state 23
    AND             shift and go to state 24


state 14

    (5) expression -> expression PLUS . expression
    (3) expression -> . MINUS expression
    (4) expression -> . FACTORIAL expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression LESST expression
    (11) expression -> . expression MORET expression
    (12) expression -> . expression LESSEQ expression
    (13) expression -> . expression MOREEQ expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . INTH
    (17) expression -> . INT
    (18) expression -> . FLOAT
    (19) expression -> . var
    (20) expression -> . NAME EQUALS expression
    (22) expression -> . LPARENT expression RPARENT
    (21) var -> . NAME

    MINUS           shift and go to state 5
    FACTORIAL       shift and go to state 6
    INTH            shift and go to state 7
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    NAME            shift and go to state 11
    LPARENT         shift and go to state 12

    expression                     shift and go to state 29
    var                            shift and go to state 10

state 15

    (6) expression -> expression MINUS . expression
    (3) expression -> . MINUS expression
    (4) expression -> . FACTORIAL expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression LESST expression
    (11) expression -> . expression MORET expression
    (12) expression -> . expression LESSEQ expression
    (13) expression -> . expression MOREEQ expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . INTH
    (17) expression -> . INT
    (18) expression -> . FLOAT
    (19) expression -> . var
    (20) expression -> . NAME EQUALS expression
    (22) expression -> . LPARENT expression RPARENT
    (21) var -> . NAME

    MINUS           shift and go to state 5
    FACTORIAL       shift and go to state 6
    INTH            shift and go to state 7
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    NAME            shift and go to state 11
    LPARENT         shift and go to state 12

    expression                     shift and go to state 30
    var                            shift and go to state 10

state 16

    (7) expression -> expression MULTIPLY . expression
    (3) expression -> . MINUS expression
    (4) expression -> . FACTORIAL expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression LESST expression
    (11) expression -> . expression MORET expression
    (12) expression -> . expression LESSEQ expression
    (13) expression -> . expression MOREEQ expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . INTH
    (17) expression -> . INT
    (18) expression -> . FLOAT
    (19) expression -> . var
    (20) expression -> . NAME EQUALS expression
    (22) expression -> . LPARENT expression RPARENT
    (21) var -> . NAME

    MINUS           shift and go to state 5
    FACTORIAL       shift and go to state 6
    INTH            shift and go to state 7
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    NAME            shift and go to state 11
    LPARENT         shift and go to state 12

    expression                     shift and go to state 31
    var                            shift and go to state 10

state 17

    (8) expression -> expression DIVIDE . expression
    (3) expression -> . MINUS expression
    (4) expression -> . FACTORIAL expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression LESST expression
    (11) expression -> . expression MORET expression
    (12) expression -> . expression LESSEQ expression
    (13) expression -> . expression MOREEQ expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . INTH
    (17) expression -> . INT
    (18) expression -> . FLOAT
    (19) expression -> . var
    (20) expression -> . NAME EQUALS expression
    (22) expression -> . LPARENT expression RPARENT
    (21) var -> . NAME

    MINUS           shift and go to state 5
    FACTORIAL       shift and go to state 6
    INTH            shift and go to state 7
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    NAME            shift and go to state 11
    LPARENT         shift and go to state 12

    expression                     shift and go to state 32
    var                            shift and go to state 10

state 18

    (9) expression -> expression MOD . expression
    (3) expression -> . MINUS expression
    (4) expression -> . FACTORIAL expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression LESST expression
    (11) expression -> . expression MORET expression
    (12) expression -> . expression LESSEQ expression
    (13) expression -> . expression MOREEQ expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . INTH
    (17) expression -> . INT
    (18) expression -> . FLOAT
    (19) expression -> . var
    (20) expression -> . NAME EQUALS expression
    (22) expression -> . LPARENT expression RPARENT
    (21) var -> . NAME

    MINUS           shift and go to state 5
    FACTORIAL       shift and go to state 6
    INTH            shift and go to state 7
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    NAME            shift and go to state 11
    LPARENT         shift and go to state 12

    expression                     shift and go to state 33
    var                            shift and go to state 10

state 19

    (10) expression -> expression LESST . expression
    (3) expression -> . MINUS expression
    (4) expression -> . FACTORIAL expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression LESST expression
    (11) expression -> . expression MORET expression
    (12) expression -> . expression LESSEQ expression
    (13) expression -> . expression MOREEQ expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . INTH
    (17) expression -> . INT
    (18) expression -> . FLOAT
    (19) expression -> . var
    (20) expression -> . NAME EQUALS expression
    (22) expression -> . LPARENT expression RPARENT
    (21) var -> . NAME

    MINUS           shift and go to state 5
    FACTORIAL       shift and go to state 6
    INTH            shift and go to state 7
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    NAME            shift and go to state 11
    LPARENT         shift and go to state 12

    expression                     shift and go to state 34
    var                            shift and go to state 10

state 20

    (11) expression -> expression MORET . expression
    (3) expression -> . MINUS expression
    (4) expression -> . FACTORIAL expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression LESST expression
    (11) expression -> . expression MORET expression
    (12) expression -> . expression LESSEQ expression
    (13) expression -> . expression MOREEQ expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . INTH
    (17) expression -> . INT
    (18) expression -> . FLOAT
    (19) expression -> . var
    (20) expression -> . NAME EQUALS expression
    (22) expression -> . LPARENT expression RPARENT
    (21) var -> . NAME

    MINUS           shift and go to state 5
    FACTORIAL       shift and go to state 6
    INTH            shift and go to state 7
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    NAME            shift and go to state 11
    LPARENT         shift and go to state 12

    expression                     shift and go to state 35
    var                            shift and go to state 10

state 21

    (12) expression -> expression LESSEQ . expression
    (3) expression -> . MINUS expression
    (4) expression -> . FACTORIAL expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression LESST expression
    (11) expression -> . expression MORET expression
    (12) expression -> . expression LESSEQ expression
    (13) expression -> . expression MOREEQ expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . INTH
    (17) expression -> . INT
    (18) expression -> . FLOAT
    (19) expression -> . var
    (20) expression -> . NAME EQUALS expression
    (22) expression -> . LPARENT expression RPARENT
    (21) var -> . NAME

    MINUS           shift and go to state 5
    FACTORIAL       shift and go to state 6
    INTH            shift and go to state 7
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    NAME            shift and go to state 11
    LPARENT         shift and go to state 12

    expression                     shift and go to state 36
    var                            shift and go to state 10

state 22

    (13) expression -> expression MOREEQ . expression
    (3) expression -> . MINUS expression
    (4) expression -> . FACTORIAL expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression LESST expression
    (11) expression -> . expression MORET expression
    (12) expression -> . expression LESSEQ expression
    (13) expression -> . expression MOREEQ expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . INTH
    (17) expression -> . INT
    (18) expression -> . FLOAT
    (19) expression -> . var
    (20) expression -> . NAME EQUALS expression
    (22) expression -> . LPARENT expression RPARENT
    (21) var -> . NAME

    MINUS           shift and go to state 5
    FACTORIAL       shift and go to state 6
    INTH            shift and go to state 7
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    NAME            shift and go to state 11
    LPARENT         shift and go to state 12

    expression                     shift and go to state 37
    var                            shift and go to state 10

state 23

    (14) expression -> expression OR . expression
    (3) expression -> . MINUS expression
    (4) expression -> . FACTORIAL expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression LESST expression
    (11) expression -> . expression MORET expression
    (12) expression -> . expression LESSEQ expression
    (13) expression -> . expression MOREEQ expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . INTH
    (17) expression -> . INT
    (18) expression -> . FLOAT
    (19) expression -> . var
    (20) expression -> . NAME EQUALS expression
    (22) expression -> . LPARENT expression RPARENT
    (21) var -> . NAME

    MINUS           shift and go to state 5
    FACTORIAL       shift and go to state 6
    INTH            shift and go to state 7
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    NAME            shift and go to state 11
    LPARENT         shift and go to state 12

    expression                     shift and go to state 38
    var                            shift and go to state 10

state 24

    (15) expression -> expression AND . expression
    (3) expression -> . MINUS expression
    (4) expression -> . FACTORIAL expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression LESST expression
    (11) expression -> . expression MORET expression
    (12) expression -> . expression LESSEQ expression
    (13) expression -> . expression MOREEQ expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . INTH
    (17) expression -> . INT
    (18) expression -> . FLOAT
    (19) expression -> . var
    (20) expression -> . NAME EQUALS expression
    (22) expression -> . LPARENT expression RPARENT
    (21) var -> . NAME

    MINUS           shift and go to state 5
    FACTORIAL       shift and go to state 6
    INTH            shift and go to state 7
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    NAME            shift and go to state 11
    LPARENT         shift and go to state 12

    expression                     shift and go to state 39
    var                            shift and go to state 10

state 25

    (3) expression -> MINUS expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . MULTIPLY expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . MOD expression
    (10) expression -> expression . LESST expression
    (11) expression -> expression . MORET expression
    (12) expression -> expression . LESSEQ expression
    (13) expression -> expression . MOREEQ expression
    (14) expression -> expression . OR expression
    (15) expression -> expression . AND expression

    PLUS            reduce using rule 3 (expression -> MINUS expression .)
    MINUS           reduce using rule 3 (expression -> MINUS expression .)
    MULTIPLY        reduce using rule 3 (expression -> MINUS expression .)
    DIVIDE          reduce using rule 3 (expression -> MINUS expression .)
    MOD             reduce using rule 3 (expression -> MINUS expression .)
    LESST           reduce using rule 3 (expression -> MINUS expression .)
    MORET           reduce using rule 3 (expression -> MINUS expression .)
    LESSEQ          reduce using rule 3 (expression -> MINUS expression .)
    MOREEQ          reduce using rule 3 (expression -> MINUS expression .)
    OR              reduce using rule 3 (expression -> MINUS expression .)
    AND             reduce using rule 3 (expression -> MINUS expression .)
    $end            reduce using rule 3 (expression -> MINUS expression .)
    RPARENT         reduce using rule 3 (expression -> MINUS expression .)

  ! PLUS            [ shift and go to state 14 ]
  ! MINUS           [ shift and go to state 15 ]
  ! MULTIPLY        [ shift and go to state 16 ]
  ! DIVIDE          [ shift and go to state 17 ]
  ! MOD             [ shift and go to state 18 ]
  ! LESST           [ shift and go to state 19 ]
  ! MORET           [ shift and go to state 20 ]
  ! LESSEQ          [ shift and go to state 21 ]
  ! MOREEQ          [ shift and go to state 22 ]
  ! OR              [ shift and go to state 23 ]
  ! AND             [ shift and go to state 24 ]


state 26

    (4) expression -> FACTORIAL expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . MULTIPLY expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . MOD expression
    (10) expression -> expression . LESST expression
    (11) expression -> expression . MORET expression
    (12) expression -> expression . LESSEQ expression
    (13) expression -> expression . MOREEQ expression
    (14) expression -> expression . OR expression
    (15) expression -> expression . AND expression

    PLUS            reduce using rule 4 (expression -> FACTORIAL expression .)
    MINUS           reduce using rule 4 (expression -> FACTORIAL expression .)
    MULTIPLY        reduce using rule 4 (expression -> FACTORIAL expression .)
    DIVIDE          reduce using rule 4 (expression -> FACTORIAL expression .)
    MOD             reduce using rule 4 (expression -> FACTORIAL expression .)
    LESST           reduce using rule 4 (expression -> FACTORIAL expression .)
    MORET           reduce using rule 4 (expression -> FACTORIAL expression .)
    LESSEQ          reduce using rule 4 (expression -> FACTORIAL expression .)
    MOREEQ          reduce using rule 4 (expression -> FACTORIAL expression .)
    OR              reduce using rule 4 (expression -> FACTORIAL expression .)
    AND             reduce using rule 4 (expression -> FACTORIAL expression .)
    $end            reduce using rule 4 (expression -> FACTORIAL expression .)
    RPARENT         reduce using rule 4 (expression -> FACTORIAL expression .)

  ! PLUS            [ shift and go to state 14 ]
  ! MINUS           [ shift and go to state 15 ]
  ! MULTIPLY        [ shift and go to state 16 ]
  ! DIVIDE          [ shift and go to state 17 ]
  ! MOD             [ shift and go to state 18 ]
  ! LESST           [ shift and go to state 19 ]
  ! MORET           [ shift and go to state 20 ]
  ! LESSEQ          [ shift and go to state 21 ]
  ! MOREEQ          [ shift and go to state 22 ]
  ! OR              [ shift and go to state 23 ]
  ! AND             [ shift and go to state 24 ]


state 27

    (20) expression -> NAME EQUALS . expression
    (3) expression -> . MINUS expression
    (4) expression -> . FACTORIAL expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression MULTIPLY expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression LESST expression
    (11) expression -> . expression MORET expression
    (12) expression -> . expression LESSEQ expression
    (13) expression -> . expression MOREEQ expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression AND expression
    (16) expression -> . INTH
    (17) expression -> . INT
    (18) expression -> . FLOAT
    (19) expression -> . var
    (20) expression -> . NAME EQUALS expression
    (22) expression -> . LPARENT expression RPARENT
    (21) var -> . NAME

    MINUS           shift and go to state 5
    FACTORIAL       shift and go to state 6
    INTH            shift and go to state 7
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    NAME            shift and go to state 11
    LPARENT         shift and go to state 12

    expression                     shift and go to state 40
    var                            shift and go to state 10

state 28

    (22) expression -> LPARENT expression . RPARENT
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . MULTIPLY expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . MOD expression
    (10) expression -> expression . LESST expression
    (11) expression -> expression . MORET expression
    (12) expression -> expression . LESSEQ expression
    (13) expression -> expression . MOREEQ expression
    (14) expression -> expression . OR expression
    (15) expression -> expression . AND expression

    RPARENT         shift and go to state 41
    PLUS            shift and go to state 14
    MINUS           shift and go to state 15
    MULTIPLY        shift and go to state 16
    DIVIDE          shift and go to state 17
    MOD             shift and go to state 18
    LESST           shift and go to state 19
    MORET           shift and go to state 20
    LESSEQ          shift and go to state 21
    MOREEQ          shift and go to state 22
    OR              shift and go to state 23
    AND             shift and go to state 24


state 29

    (5) expression -> expression PLUS expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . MULTIPLY expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . MOD expression
    (10) expression -> expression . LESST expression
    (11) expression -> expression . MORET expression
    (12) expression -> expression . LESSEQ expression
    (13) expression -> expression . MOREEQ expression
    (14) expression -> expression . OR expression
    (15) expression -> expression . AND expression
